--- a/index.html
+++ b/index.html
@@ -120,9 +120,11 @@
                 };
             }(method);
         }
-        rudderanalytics.load('1lN3tsFD2nruGFgM5F074DC2hMB', 'https://hosted.rudderlabs.com');
-        //For example,
-        //rudderanalytics.load("1Qb1F3jSWv0eKFBPZcrM7ypgjVo", "http://localhost:8080");
+        // Production keys
+        rudderanalytics.load('1oV5agvlcnCZ6IH94wCKM1oR8Pd', 'https://deriv-dataplane.rudderstack.com');
+        // Staging keys
+        // rudderanalytics.load('1lN3tsFD2nruGFgM5F074DC2hMB', 'https://hosted.rudderlabs.com');
+        
         rudderanalytics.page();
     </script>
     <script async src="https://cdn.rudderlabs.com/rudder-analytics.min.js"></script>
@@ -321,6 +323,6 @@
         })(window, document, [].slice);
     </script>
     <!-- End LiveChat script -->
-<script type="text/javascript" src="/js/core.vendors~main.12593358ccc3dc094c9a.js"></script><script type="text/javascript" src="/js/core.main.857c4e39f2a426c53496.js"></script></body>
+<script type="text/javascript" src="/js/core.vendors~main.67885e3bcf7514c83b48.js"></script><script type="text/javascript" src="/js/core.main.8b0ccc58bb52c4ef2ff4.js"></script></body>
 
 </html>
